--- a/frontend/quickbites/package.json
+++ b/frontend/quickbites/package.json
@@ -2,6 +2,7 @@
   "name": "quickbites",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5555",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-use-cart": "^1.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
